# libanimation

./: CMakeLists.txt  README.md
include/: animation.h  keyframes.h  options.h  production.h  sequence.h  shot.h  test.h  timing.h
include/math/: interpolation.h  sum.h
shared/: CMakeLists.txt  libanimation.pc.in
src/: animation.c  keyframes.c  main.c  options.c  test.c  timing.c
src/math/: interpolation.c  sum.c
tests/: CMakeLists.txt
tests/src/: main.cpp
